	Now implements the BaseIPrefs interface.

	* src/nact/nact-main-window.c (nact_main_window_action_exists):
	No more check for action existancy in NAPivot.
	No more forward nact-tab-updatable-item-updated signal.
	Implements IActionsList::get_treeview_name virtual function.
	Remove useless NAIPrefs implementation.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h
	(nact_iactions_list_collapse_all, nact_iactions_list_expand_all):
	New functions.
	Remove useless nact-iactions-list-item-updated signal.
	Connect instead to nact-tab-updatable-item-updated signal.
	(get_treeview_name): New pure virtual function.

	* src/nact/nact-main-menubar.c (on_duplicate_activated):
	Takes advantage of new UI preferences.
	Define new Expand all/Collapse all menu items.

	* src/nact/nact-preferences-editor.c:
	Edit the new UI preferences.
	Do not implement BaseIPrefs nor NAIPrefs interfaces.
	Implement new order mode semantic.
	Make sure to show the page zero when opening the editor.

	* src/nact/nact-tree-model.c (sort_actions_list):
	Implement new order mode semantic.
	Use new NAPivot sort functions.

	* src/nact/nautilus-actions-config-tool.actions:
	Define new View menu.

	* src/nact/nautilus-actions-config-tool.ui:
	Edit the user preferences in a notebook.
	Remove "orientation=vertical" vbox properties.

	* src/plugin/nautilus-actions.c:
	Trigger items-updated signal to Nautilus on runtime preferences
	changes.

2009-09-27 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_set_for_copy): New function.

	* src/common/na-object-id-fn.h:
	* src/common/na-object-id.c (na_object_id_set_for_copy): New function.
	(most_derived_new_id): Do not search in NAObjectClass.

	* src/common/na-object-item.c (na_object_item_remove_item):
	Release the reference on the removed item.
	Only release the reference when action or menu, not profile.

	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h (nact_clipboard_primary_set,